<package>
  <name>ros_rust</name>
  <version>0.1.0</version>
  <description>
    ROS client for rust.
  </description>
  <maintainer email="jon.binney@gmail.com">Jon Binney</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
